@@ -158,6 +158,10 @@ AC_CHECK_TYPE([wchar_t], [],
 	[AC_DEFINE([wchar_t], [char], [Make sure we have wchar_t])],
 	[#include <stddef.h>])
 
+AC_CHECK_TYPE([struct timespec],
+	[AC_DEFINE(HAVE_STRUCT_TIMESPEC, 1, [Define to 1 if you have the struct timespec type])],
+	[], [[#include <time.h>]])
+
 dnl See if the windows target is polluting the namespace on us which
 dnl will break some of the lex/yacc (e.g. bsdl) builds.  We need both
 dnl defines as some versions of mingw have changed names over time.
